# core

./: .gitignore  Cargo.toml  Dockerfile  build-with-vs.bat  build-with-vs.ps1  ci-policy.json  clean-all.bat  clean-all.ps1  init_db.sql  install.ps1  install.sh  run-migrate.bat  run-server.bat  run-server.ps1  rustpress-cli-commands.txt  test_api.py
crates/rustpress-api/: Cargo.toml
crates/rustpress-api/src/: dto.rs  handlers.rs  lib.rs  services.rs
crates/rustpress-api/src/handlers/: animations.rs  auth.rs  blocks.rs  comments.rs  media.rs  pages.rs  posts.rs  settings.rs  templates.rs  themes.rs  users.rs
crates/rustpress-api/src/services/: animation_service.rs  auth_service.rs  comment_service.rs  media_service.rs  page_service.rs  post_service.rs  settings_service.rs  storage_service.rs  user_service.rs
crates/rustpress-auth/: Cargo.toml
crates/rustpress-auth/src/: api_key.rs  audit.rs  brute_force.rs  csrf.rs  impersonation.rs  ip_filter.rs  jwt.rs  lib.rs  middleware.rs  oauth2_client.rs  oauth2_provider.rs  password.rs  permission.rs  rate_limit.rs  refresh_token.rs  session.rs  tokens.rs  totp.rs  webauthn.rs
crates/rustpress-cache/: Cargo.toml
crates/rustpress-cache/src/: backend.rs  cache.rs  key.rs  lib.rs
crates/rustpress-cdn/: Cargo.toml
crates/rustpress-cdn/src/: bunnycdn.rs  cloudflare.rs  lib.rs  manager.rs
crates/rustpress-cli/: Cargo.toml
crates/rustpress-cli/src/: context.rs  error.rs  lib.rs  main.rs  output.rs  prompts.rs  repl.rs
crates/rustpress-cli/src/commands/: artifacts.rs  auth.rs  backup.rs  cache.rs  completion.rs  config.rs  cron.rs  db.rs  import_export.rs  media.rs  mod.rs  pages.rs  plugins.rs  posts.rs  seo.rs  server.rs  settings.rs  themes.rs  users.rs
crates/rustpress-content/: Cargo.toml
crates/rustpress-content/src/: access.rs  autosave.rs  blocks.rs  bulk.rs  elementor.rs  excerpt.rs  featured.rs  fields.rs  i18n.rs  lib.rs  markdown.rs  media.rs  oembed.rs  post_type.rs  post_types.rs  related.rs  revision.rs  sanitize.rs  scheduler.rs  scheduling.rs  shortcode.rs  taxonomy.rs  templates.rs  toc.rs  trash.rs  versioning.rs  workflow.rs  wxr.rs
crates/rustpress-core/: Cargo.toml
crates/rustpress-core/src/: api.rs  config.rs  context.rs  discovery.rs  error.rs  health.rs  hook.rs  id.rs  lib.rs  middleware.rs  plugin.rs  plugin_loader.rs  repository.rs  service.rs  tenant.rs  types.rs
crates/rustpress-database/: Cargo.toml
crates/rustpress-database/src/: lib.rs  migration.rs  models.rs  pool.rs  repository.rs  schema.rs  transaction.rs
crates/rustpress-database/src/providers/: mod.rs  planetscale.rs  postgres.rs  supabase.rs
crates/rustpress-database/tests/: persistence_tests.rs
crates/rustpress-editor/: Cargo.toml
crates/rustpress-editor/src/: lib.rs
crates/rustpress-editor/src/analysis/: accessibility.rs  keyword.rs  mod.rs  readability.rs  seo_analyzer.rs
crates/rustpress-editor/src/api/: mod.rs
crates/rustpress-editor/src/blocks/: mod.rs  registry.rs  serialization.rs  transform.rs  types.rs  validation.rs
crates/rustpress-editor/src/collaboration/: mod.rs
crates/rustpress-editor/src/post/: document.rs  media.rs  metadata.rs  mod.rs  publishing.rs  revision.rs  seo.rs  stats.rs
crates/rustpress-editor/tests/: comprehensive_tests.rs  editor_tests.rs  ide_tests.rs
crates/rustpress-events/: Cargo.toml
crates/rustpress-events/src/: bus.rs  event.rs  lib.rs  subscriber.rs
crates/rustpress-health/: Cargo.toml
crates/rustpress-health/src/: checker.rs  handlers.rs  lib.rs  probes.rs  router.rs  status.rs  system.rs
crates/rustpress-jobs/: Cargo.toml
crates/rustpress-jobs/src/: handlers.rs  job.rs  lib.rs  queue.rs  scheduler.rs  worker.rs
crates/rustpress-media/: Cargo.toml
crates/rustpress-media/src/: audio.rs  editor.rs  image_optimizer.rs  lazy_loading.rs  lib.rs  library.rs  srcset.rs  upload.rs  video.rs
crates/rustpress-performance/: Cargo.toml
crates/rustpress-performance/src/: cdn.rs  connection_pool.rs  edge_cache.rs  http_cache.rs  image_optimization.rs  isr.rs  lazy_loading.rs  lib.rs  load_balancing.rs  minification.rs  object_cache.rs  page_cache.rs  preload.rs  profiling.rs  query_cache.rs  query_logging.rs  service_worker.rs  ssr.rs  static_files.rs
crates/rustpress-plugins/: Cargo.toml
crates/rustpress-plugins/src/: admin.rs  api.rs  assets.rs  crypto.rs  dependencies.rs  discovery.rs  features.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  migrations.rs  monitoring.rs  network.rs  registrations.rs  registry.rs  sandbox.rs  settings.rs  updates.rs
crates/rustpress-storage/: Cargo.toml
crates/rustpress-storage/src/: backend.rs  file.rs  lib.rs  storage.rs
crates/rustpress-themes/: Cargo.toml
crates/rustpress-themes/src/: assets.rs  child_theme.rs  critical_css.rs  customizer.rs  design_tokens.rs  docs.rs  export.rs  fse.rs  images.rs  lib.rs  manager.rs  manifest.rs  marketplace.rs  patterns.rs  quality.rs  settings.rs  starter_content.rs  templates.rs  theme_json.rs  variations.rs
crates/rustpress-users/: Cargo.toml
crates/rustpress-users/src/: activity.rs  audit.rs  avatar.rs  dashboard.rs  gdpr.rs  groups.rs  import_export.rs  lib.rs  listing.rs  notifications.rs  oauth.rs  ownership.rs  password.rs  profile.rs  registration.rs  roles.rs  session.rs  social.rs  two_factor.rs
plugins/rustanalytics/: Cargo.toml  plugin.toml
plugins/rustanalytics/migrations/: 001_create_tables.sql
plugins/rustanalytics/src/: lib.rs
plugins/rustanalytics/src/admin/: mod.rs
plugins/rustanalytics/src/handlers/: mod.rs
plugins/rustanalytics/src/models/: acquisition.rs  analytics.rs  api.rs  audience.rs  behavior.rs  mod.rs  (+5 more)
plugins/rustanalytics/tests/: acquisition_models_test.rs  admin_test.rs  analytics_service_test.rs  behavior_models_test.rs  cache_service_test.rs  client_service_test.rs  conversions_models_test.rs  ecommerce_models_test.rs  ga_client_integration.rs  handlers_test.rs  realtime_service_test.rs  reports_service_test.rs  sync_service_test.rs
plugins/rustbuilder/: Cargo.toml
plugins/rustbuilder/src/: api.rs  builder.rs  lib.rs
(+376 files in other folders)
