[package]
name = "rustpress-content"
version = "0.1.0"
edition = "2021"
description = "Content management system for RustPress - block editor, markdown, versioning"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Markdown processing
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "11"

# HTML sanitization
ammonia = "3.3"

# Text processing
regex = "1.10"
slug = "0.1"
urlencoding = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Diff/patch for versioning
similar = "2.3"

# Scheduling
cron = "0.12"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
