[package]
name = "rustpress-core"
description = "Core types, traits, and interfaces for RustPress CMS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
full = ["metrics", "tracing-full"]
metrics = []
tracing-full = []

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
url.workspace = true
semver.workspace = true

# Validation
validator.workspace = true

# Concurrency
parking_lot.workspace = true
dashmap.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
