[package]
name = "rustpress-health"
version = "0.1.0"
edition = "2021"
authors = ["RustPress Contributors"]
description = "Health check and readiness probes for RustPress CMS"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustpress/rustpress"
keywords = ["health", "kubernetes", "probes", "monitoring"]
categories = ["web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# Async traits
async-trait = "0.1"

# System info
sysinfo = "0.30"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
kubernetes = []
prometheus = []
