[package]
name = "rustpress-jobs"
description = "Background job queue system for RustPress CMS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustpress-core = { path = "../rustpress-core" }
rustpress-database = { path = "../rustpress-database" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Database
sqlx.workspace = true

# Concurrency
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
