[package]
name = "rustpress-performance"
description = "Performance optimization and caching system for RustPress CMS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustpress-core = { path = "../rustpress-core" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Caching
redis.workspace = true
moka.workspace = true

# HTTP
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Database
sqlx.workspace = true
deadpool.workspace = true

# Time
chrono.workspace = true
httpdate = "1.0"

# Hashing
blake3 = "1.5"

# Compression
flate2 = "1.0"
brotli = "3.4"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# Concurrent data structures
dashmap.workspace = true
parking_lot.workspace = true

# Types
uuid.workspace = true
bytes.workspace = true
mime.workspace = true

# Metrics
prometheus-client.workspace = true

# HTTP client for CDN/external services
reqwest.workspace = true

# Regex for parsing
regex.workspace = true

# URL handling
url.workspace = true

# Random number generation
rand.workspace = true

# Base64 encoding
base64 = "0.22"

# Hex encoding
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
