[package]
name = "rustpress-storage"
description = "File storage abstraction for RustPress CMS supporting local and cloud backends"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["local"]
local = []
s3 = ["object_store/aws"]
azure = ["object_store/azure"]
gcs = ["object_store/gcp"]

[dependencies]
rustpress-core = { path = "../rustpress-core" }

# Async
tokio = { workspace = true, features = ["fs"] }
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
mime.workspace = true

# Object store
object_store.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
