[package]
name = "rustanalytics"
version = "1.0.0"
edition = "2021"
authors = ["RustPress Team"]
description = "Enterprise Google Analytics integration plugin for RustPress - comprehensive analytics, reporting, and real-time data"
license = "MIT"
repository = "https://github.com/rustpress/rustpress"
keywords = ["rustpress", "plugin", "analytics", "google-analytics", "enterprise"]
categories = ["web-programming"]

# Exclude from parent workspace
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Google Analytics API (using native-tls to avoid ring dependency)
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# JWT for service account authentication (pure Rust implementation)
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.21"

# Random number generation
rand = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Parking lot for synchronization
parking_lot = "0.12"

# Semver for versioning
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
