[package]
name = "rustbuilder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RustPress Page Builder Plugin"

[dependencies]
rustpress-core = { path = "../../crates/rustpress-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
semver = { workspace = true }

[lib]
path = "src/lib.rs"
